--- a/public/index.html
+++ b/public/index.html
@@ -106,8 +106,8 @@
 					</div>
 					<div class="row"></div>
 					<div class="row">
-						<a href="https://forms.gle/GH1tWeFjnKL1EBrE8" target="_blank" class="source disable">
-							Request a new source
+						<a href="" target="_blank" class="source disable">
+							<!-- Request a new source -->
 						</a>
 					</div>
 				</section>
