--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19124340-30"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-
-			gtag("config", "UA-19124340-30");
-		</script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Cache-control" content="public" />
 		<meta
 			name="viewport"
 			content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover"
 		/>
-		<meta name="description" content="Flash - Read all your favourite tech news in one place." />
+		<meta name="description" content="Flash - Read all your favourite news in one place." />
 		<meta name="keywords" content="tech news, technology news" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
@@ -40,7 +29,7 @@
 		<meta name="twitter:description" content="Read all your favourite tech news in one place." />
 		<meta name="twitter:image" content="http://news.anshulgarg.in/banner.png" />
 
-		<title>Flash - All your tech news in one place.</title>
+		<title>Flash - All your favourite news in one place.</title>
 		<!-- Site scripts & styles -->
 		<link href="/style.css" rel="stylesheet" />
 		<script defer src="/vue.global.prod.js"></script>
@@ -74,7 +63,7 @@
 						</button>
 					</div>
 					<div class="light" v-if="!showSources">
-						Read all your tech news (TechCrunch, Hacker News, Product Hunt and many more) in one place.
+						Read all your favourite news (TechCrunch, Hacker News, Product Hunt and many more) in one place.
 					</div>
 				</header>
 				<section v-if="!showSources">
