adds indian express

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 						</button>
 					</div>
 					<div class="light" v-if="!showSources">
-						Read all your favourite news (TechCrunch, Hacker News, Product Hunt and many more) in one place.
+						Read all your favourite news (The Hindu, Times of India, Indian Express and many more) in one place.
 					</div>
 				</header>
 				<section v-if="!showSources">
